cmake_minimum_required (VERSION 3.6)
project (liborts)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
add_library(orts SHARED serverlib.cpp client.cpp common.cpp polling.cpp)
target_compile_definitions(orts PUBLIC _GLIBCXX_DEBUG)
target_include_directories(orts PUBLIC include)

if (NOT ANDROID)
    add_executable(server server.cpp)
    target_link_libraries(server PRIVATE orts)
    target_compile_definitions(server PUBLIC _GLIBCXX_DEBUG)
endif()
if(WIN32)
    target_link_libraries(orts PRIVATE wsock32)
    target_link_libraries(server PRIVATE wsock32)
endif()

if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
    if(WIN32)
        add_subdirectory(Examples/TrainSimulator)
    endif()
endif()
#target_include_directories()
#install(TARGETS orts EXPORT orts)
